--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
 }
+body {
+  margin: 0;
+  padding: 0;
+}
 .header {
   flex: 30%;
   background-color: tomato;
@@ -13,4 +17,31 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+}
+.header input {
+  width: 200px;
+  height: 40px;
+  border: none;
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
+  padding-left: 10px;
+  font-size: 17px;
+  border: 1px solid black;
+}
+.header button {
+  width: 70px;
+  height: 87px;
+  border: none;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  cursor: pointer;
+  padding-left: 10px;
+}
+.todoList {
+  flex: 70%;
+  width: 100%;
 }
